# iagro-ai-integration

./: .gitignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.ps1  start.sh
app/: main.py
app/constants/: __init__.py  chroma.py  defaults.py  prompts.py
app/models/: knowledge_document.py
app/routes/: __init__.py  analysis.py  chat.py  chroma.py
app/schemas/: analysis.py  chat.py
app/services/: firebase_service.py  openai_service.py
app/services/chroma/: chroma_service.py  client.py  indexer.py  retriever.py
app/services/embeddings/: generator.py
app/utils/: image_utils.py
scraping/: config.py  main.py  scraper.py
scraping/docling/: converter.py
scraping/docling/docs/: doc_paths.py
scraping/docling_converter/: converter.py
scraping/docling_converter/docs/converted/: html_converted_1.json  html_converted_1.md  html_converted_2.json  html_converted_2.md  html_converted_3.json  html_converted_3.md  html_converted_4.json  html_converted_4.md  html_converted_5.json  html_converted_5.md  html_converted_6.json  html_converted_6.md  html_converted_7.json  html_converted_8.json  local_pdf_converted_1.md  local_pdf_converted_2.md  local_pdf_converted_3.md  url_pdf_converted_1.md  url_pdf_converted_10.md  url_pdf_converted_11.md  url_pdf_converted_12.md  url_pdf_converted_2.md  url_pdf_converted_3.md  url_pdf_converted_4.md  url_pdf_converted_5.md  url_pdf_converted_6.md  url_pdf_converted_7.md  url_pdf_converted_8.md  url_pdf_converted_9.md
scraping/utils/: data_cleaning.py
scripts/: seed_chroma.py
(+24 files in other folders)
